WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39964
[GTK] Missing links to documentation of general functions
https://bugs.webkit.org/show_bug.cgi?id=39964
Summary
[GTK] Missing links to documentation of general functions
Gustavo Noronha (kov)
Reported
2010-05-31 10:58:50 PDT
Things such as webkit_get_default_session do have documentation, but it is not easy to find, given the lack of links to them in the main document.
Attachments
add links to the docs of those functions
(6.00 KB, patch)
2010-05-31 11:00 PDT
,
Gustavo Noronha (kov)
gustavo
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2010-05-31 11:00:56 PDT
Created
attachment 57482
[details]
add links to the docs of those functions
WebKit Review Bot
Comment 2
2010-05-31 11:02:30 PDT
Attachment 57482
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebKit/gtk/webkit/webkitwebview.cpp:4324: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xan Lopez
Comment 3
2010-05-31 12:14:58 PDT
Comment on
attachment 57482
[details]
add links to the docs of those functions OK; for the future, I think we should move this stuff to a different file :)
Gustavo Noronha (kov)
Comment 4
2010-05-31 13:15:11 PDT
Totally agreed. I'll see if I can find some time to write the patch to put them all in a separate file.
Gustavo Noronha (kov)
Comment 5
2010-06-01 06:03:48 PDT
Landed as
r60472
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug