2010-05-31  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Xan Lopez.

        [GTK] Missing links to documentation of general functions
        https://bugs.webkit.org/show_bug.cgi?id=39964

        Add global functions section, and move those functions that are
        currently in WebKitWebView's source file to the bottom, along with
        the description.

        * docs/webkitgtk-docs.sgml:
        * docs/webkitgtk-sections.txt:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_get_dom_document):
        (webkit_get_default_session):

Canonical link: https://commits.webkit.org/51511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60472 268f45cc-cd09-0410-ab3c-d52691b4dbfc